force-app/main/default/objects/eCard_Discrepancy_Data__x/eCard_Discrepancy_Data__x.object-meta.xml
<CustomObject>
    <description>dw_view_ecard$ecard_discrepancy_data</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_view_ecard$ecard_discrepancy_data</externalName>
    <label>eCard_Discrepancy_Data</label>
    <pluralLabel>eCard_Discrepancy_Data</pluralLabel>
</CustomObject>