force-app/main/default/objects/eCard_Discrepancy_Data__x/fields/created_hour__c.field-meta.xml
<CustomField>
    <fullName>created_hour__c</fullName>
    <description>created_hour</description>
    <externalDeveloperName>created_hour</externalDeveloperName>
    <label>created_hour</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>