force-app/main/default/objects/eCard_Discrepancy_Data__x/fields/customer_name__c.field-meta.xml
<CustomField>
    <fullName>customer_name__c</fullName>
    <description>customer_name</description>
    <externalDeveloperName>customer_name</externalDeveloperName>
    <label>customer_name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>