force-app/main/default/objects/eCard_Discrepancy_Data__x/fields/discrepancy__c.field-meta.xml
<CustomField>
    <fullName>discrepancy__c</fullName>
    <description>discrepancy</description>
    <externalDeveloperName>discrepancy</externalDeveloperName>
    <label>discrepancy</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>