force-app/main/default/objects/eCard_Discrepancy_Data__x/fields/foreman2__c.field-meta.xml
<CustomField>
    <fullName>foreman2__c</fullName>
    <description>foreman2</description>
    <externalDeveloperName>foreman2</externalDeveloperName>
    <label>foreman2</label>
    <length>254</length>
    <type>Text</type>
</CustomField>