force-app/main/default/objects/eCard_Discrepancy_Data__x/fields/has_any_attachment__c.field-meta.xml
<CustomField>
    <fullName>has_any_attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>has_any_attachment</description>
    <externalDeveloperName>has_any_attachment</externalDeveloperName>
    <label>has_any_attachment</label>
    <type>Checkbox</type>
</CustomField>