force-app/main/default/objects/eCard_Discrepancy_Data__x/fields/modified_hour__c.field-meta.xml
<CustomField>
    <fullName>modified_hour__c</fullName>
    <description>modified_hour</description>
    <externalDeveloperName>modified_hour</externalDeveloperName>
    <label>modified_hour</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>