force-app/main/default/objects/eCard_Discrepancy_Data__x/fields/raised_hour__c.field-meta.xml
<CustomField>
    <fullName>raised_hour__c</fullName>
    <description>raised_hour</description>
    <externalDeveloperName>raised_hour</externalDeveloperName>
    <label>raised_hour</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>