force-app/main/default/objects/eCard_Discrepancy_Data__x/fields/resolved_hour__c.field-meta.xml
<CustomField>
    <fullName>resolved_hour__c</fullName>
    <description>resolved_hour</description>
    <externalDeveloperName>resolved_hour</externalDeveloperName>
    <label>resolved_hour</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>