force-app/main/default/objects/eCard_Discrepancy_Data__x/fields/verified_by__c.field-meta.xml
<CustomField>
    <fullName>verified_by__c</fullName>
    <description>verified_by</description>
    <externalDeveloperName>verified_by</externalDeveloperName>
    <label>verified_by</label>
    <length>254</length>
    <type>Text</type>
</CustomField>