force-app/main/default/objects/eCard_Discrepancy_Data__x/fields/verified_hour__c.field-meta.xml
<CustomField>
    <fullName>verified_hour__c</fullName>
    <description>verified_hour</description>
    <externalDeveloperName>verified_hour</externalDeveloperName>
    <label>verified_hour</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>